--- a/css/modules/list.css
+++ b/css/modules/list.css
@@ -6,9 +6,8 @@
 
 .list__link {
     text-decoration: none;
-    color: var(--reverse-primary-text-color);
+    color: #000;
     font-weight: 500;
-    text-decoration: none;
     transition: color 0.25s;
 }
 
