editando tamaño de la galeria

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@
 @import './modules/aboutus.css';
 @import './modules/blog.css';
 @import './modules/gallery.css';
+@import './modules/form.css';
 
 /* @import './modules/buttons.css'; */
 @import './modules/footer.css';
