--- a/css/modules/layout.css
+++ b/css/modules/layout.css
@@ -89,7 +89,7 @@
     grid-template-columns: repeat(auto-fit, minmax(15.625rem, 1fr));
 }
 
-.g-elements--gallery{
+.g-elements--gallery--products{
     grid-template-columns: repeat(3, 1fr);
 }
 
