--- a/css/modules/form.css
+++ b/css/modules/form.css
@@ -46,6 +46,13 @@
     transition: background-color .3s ease-out;
     font-size: 0.85rem;
     border: none;
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .form__submit{
+        width: auto;
+    }
 }
 
 .form__submit:hover{
