--- a/css/modules/header.css
+++ b/css/modules/header.css
@@ -2,10 +2,15 @@
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: #000;
 }
 .header__title span {
     color: var(--secondary-text-color);
 }
 
+@media (min-width: 768px) {
+    .header__title{
+        font-size: 3rem;
+    }
+}
