--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@
 @import './modules/blog.css';
 @import './modules/gallery.css';
 @import './modules/form.css';
+@import './modules/us.css';
 
 /* @import './modules/buttons.css'; */
 @import './modules/footer.css';
