--- a/css/modules/aboutus.css
+++ b/css/modules/aboutus.css
@@ -1,15 +1,41 @@
 .aboutus{
     /* background-image: linear-gradient( to right, #000 50%, red 100%); */
-    background-image: linear-gradient( to right, transparent 50%, var(--secondary-theme-color) 50%, var(--secondary-theme-color) 100%),
+    background-image: linear-gradient( to bottom, transparent 50%, var(--secondary-theme-color) 50%, var(--secondary-theme-color) 100%),
     url(../../img/nosotros.jpg);
-    background-position: left center;
-    padding: 6.25rem 0;
+    background-position: center, top left;
+    /* object-fit: contain; */
+    /* padding: 6.25rem 0; */
     background-repeat: no-repeat;
-    background-size: 100, 75rem;
+    background-size: 100%, 70rem;
 }
 
+@media (min-width: 768px) {
+    .aboutus{
+        /* background-image: linear-gradient( to right, #000 50%, red 100%); */
+        background-image: linear-gradient( to right, transparent 50%, var(--secondary-theme-color) 50%, var(--secondary-theme-color) 100%),
+        url(../../img/nosotros.jpg);
+        background-position: left center;
+        /* object-fit: contain; */
+        padding: 6.25rem 0;
+        background-repeat: no-repeat;
+        background-size: 100%, 80rem;
+    }
+}
+
+/* .aboutus__body{
+    grid-row-start: 2/3;
+} */
 .aboutus__body{
-    grid-column: 2/3;
+    grid-row: 2/3;
+    padding: 3.125rem;
+}
+
+@media (min-width: 768px){
+    .aboutus__body{
+        grid-column: 2/3;
+        padding: 0;
+    }
+    
 }
 
 .aboutus__title{
