--- a/css/modules/footer.css
+++ b/css/modules/footer.css
@@ -4,16 +4,33 @@
 }
 
 /* .footer__section{
-    flex: 1;
+    padding: 0;
+    margin: 0;
 } */
+
+@media (min-width: 768px){
+    .footer__section {
+        margin-bottom: 0;
+    }
+}
 
 .footer-nav__section-title{
     margin: 0;
     /* padding: 0; */
+    font-size: 1rem;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .footer-nav__section-title{
+        font-size: 1.5rem;
+        text-align: left;
+    }
 }
 
 .footer-nav{
-    padding: 1.25rem 0;
+    /* padding: 1.25rem 0; */
+    padding-bottom: 1.25rem;
 }
 
 .footer-nav__list{
@@ -31,8 +48,14 @@
     text-decoration: none;
     transition: color 0.25s;
     display: block;
+    text-align: center;
 }
+@media (min-width: 768px) {
+    .footer-nav__link{
+        text-align: left;
 
+    }
+}
 
 .footer-copyright{
     padding-top: 1.25rem;
