--- a/css/modules/hero.css
+++ b/css/modules/hero.css
@@ -1,8 +1,15 @@
 .hero{
     background-image: url(../../img/principal.jpg);
     background-repeat: no-repeat;
-    background-position: center;
     background-size: cover;
+    background-position: center center;
     box-sizing: border-box;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    height: 25rem;
+}
+
+@media (min-width: 768px){
+    .hero{
+        height: 55rem;
+    }
 }
